cmake_minimum_required(VERSION 2.8)
#project( stitching_detailed )
project( timelapsing_detailed )
find_package( OpenCV REQUIRED )
#add_executable( stitching_detailed stitching_detailed.cpp )
add_executable( timelapsing_detailed timelapsing_detailed.cpp )
target_link_libraries( stitching_detailed ${OpenCV_LIBS} )